<resources>
    <string name="app_name">WiFi AP Logger</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_welcome">Hello, anonymous user!\nPlease sign in to start using this app!</string>
    <string name="your_sign_in_email">Your email:</string>
    <string name="your_sign_in_name">Your name:</string>
    <string name="user_name">Name</string>
    <string name="user_email">Email</string>
    <string name="sign_out">Sign Out</string>
    <string name="scan_start">Scan now!</string>
    <string name="scan_stop">Stop</string>
    <string name="your_location">Your location:</string>
    <string name="location_display">Unavailable</string>
    <string name="your_wifi_networks_number">Available WiFi networks:</string>
    <string name="wifi_networks_number_display">Unavailable</string>
    <string name="select_logging_frequency">Tap to select logging frequency (sec)</string>
    <string name="permission_denied">Location permission required</string>
    <string name="logging_not_running">Logging is NOT running!</string>
    <string name="logging_is_running">Logging is running!</string>
    <string name="permissions_granted">Permissions have been granted!</string>
    <string name="sign_out_failed">Sign out failed!</string>
</resources>
